[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/characters/Sheep/sheep.gd" type="Script" id=1]
[ext_resource path="res://src/characters/StateMachine/state_machine.gd" type="Script" id=2]
[ext_resource path="res://src/characters/Sheep/states/idle.gd" type="Script" id=3]
[ext_resource path="res://src/characters/Sheep/states/move.gd" type="Script" id=4]
[ext_resource path="res://src/characters/Sheep/states/air.gd" type="Script" id=5]
[ext_resource path="res://src/tests/test_objects/StateLabelNode.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/characters/Sheep/states/run.gd" type="Script" id=7]
[ext_resource path="res://src/characters/Sheep/states/graze.gd" type="Script" id=8]
[ext_resource path="res://src/characters/Sheep/states/rigid.gd" type="Script" id=9]
[ext_resource path="res://src/characters/Sheep/SheepRigid.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CapsuleShape" id=3]
radius = 0.5

[sub_resource type="SphereShape" id=4]

[node name="Sheep" type="KinematicBody"]
collision_layer = 8
collision_mask = 31
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="GrazeDetectionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.59267 )
collision_layer = 8
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="GrazeDetectionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.735313 )
shape = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="Graze" type="Node" parent="StateMachine/Move"]
script = ExtResource( 8 )

[node name="Rigid" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="StateLabelNode" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )

[node name="IdleTimer" type="Timer" parent="."]
autostart = true

[node name="GrazeTimer" type="Timer" parent="."]

[node name="SheepRigid" parent="." instance=ExtResource( 10 )]
visible = false
sleeping = true

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="GrazeDetectionArea" to="StateMachine/Move" method="_on_GrazeDetectionArea_body_entered"]
[connection signal="timeout" from="IdleTimer" to="StateMachine/Move/Idle" method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="GrazeTimer" to="StateMachine/Move/Graze" method="_on_GrazeTimer_timeout"]
